--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -13,7 +13,7 @@
     }
 
     *, *::before, *::after {
-      box-sizing: content-box;
+      box-sizing: inherit;
     }
     .base {
       height: 9em;
@@ -93,10 +93,11 @@
     .demo13 {
       color: rgba(25, 202, 173,1);
       text-shadow: 3px 3px 0 rgba(160,238,225,0.25);
-      font-size: 50px;
+      font-size: 30px;
+      font-weight: 900;
       text-align: center;
       position: absolute;
-      top: 60%;
+      top: 65%;
       width: 100%;
     }
     
@@ -124,10 +125,10 @@
       var cubes = document.getElementById('cubes');
       var desc = document.getElementById('desc');
       //设置loading 隐藏
-      cubes.style.display='none';
-      desc.style.display='none';
-      //设置root显示
-      root.style.display='';
+      // cubes.style.display='none';
+      // desc.style.display='none';
+      // //设置root显示
+      // root.style.display='';
     }
   
   </script>
