--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -125,10 +125,10 @@
       var cubes = document.getElementById('cubes');
       var desc = document.getElementById('desc');
       //设置loading 隐藏
-      // cubes.style.display='none';
-      // desc.style.display='none';
-      // //设置root显示
-      // root.style.display='';
+      cubes.style.display='none';
+      desc.style.display='none';
+      //设置root显示
+      root.style.display='';
     }
   
   </script>
