1.如果最开始 hidden root计算高度会异常 导致无法刷新出图片 2.hardSource: false,

--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -102,10 +102,10 @@
     }
     
     </style>
-    <script src="./js/prefixfree.min.js"></script>
+    <!-- <script src="./js/prefixfree.min.js"></script> -->
 </head>
 <body>
-  <div id="root" style="display:none"></div>
+  <div id="root"></div>
   <div id="cubes" class='base'>
     <div class='cube'></div>
     <div class='cube'></div>
