--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -7,10 +7,6 @@
   <title>zhaohui.wiki</title>
   <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.data-set-0.9.6/dist/data-set.min.js"></script>
   <style>
-    body {
-      background-color: #dedede;
-      font-size: 12px;
-    }
 
     *, *::before, *::after {
       box-sizing: inherit;
@@ -100,33 +96,41 @@
       top: 65%;
       width: 100%;
     }
+    #loadingPanel{
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      background-color: #dedede;
+    }
     
     </style>
-    <!-- <script src="./js/prefixfree.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/prefixfree/1.0.7/prefixfree.min.js"></script> 
 </head>
 <body>
   <div id="root"></div>
-  <div id="cubes" class='base'>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
-    <div class='cube'></div>
+  <div id="loadingPanel">
+    <div id="cubes" class='base'>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+      <div class='cube'></div>
+    </div>
+    <h4 id="desc" class="demo13">阿里云1M小水管真的好慢T_T</h4>
   </div>
-  <h4 id="desc" class="demo13">阿里云1M小水管真的好慢T_T</h4>
+
   <script type="text/javascript">
     window.onload=function (){
       //location.href = "/frontend/";
       var root= document.getElementById('root');
-      var cubes = document.getElementById('cubes');
-      var desc = document.getElementById('desc');
+      var loadingPanel = document.getElementById('loadingPanel');
       //设置loading 隐藏
-      cubes.style.display='none';
-      desc.style.display='none';
+      loadingPanel.style.display='none';
       //设置root显示
       root.style.display='';
     }
