--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -41,7 +41,7 @@
       transform-style: preserve-3d;
       transition: .25s;
       box-shadow: 13em 13em 1.5em rgba(0, 0, 0, 0.1);
-      animation: anim 1s infinite;
+      animation: anim 2s infinite;
     }
     .cube:after {
       background-color: #049dbc;
@@ -54,31 +54,31 @@
       transform-origin: 100% 0;
     }
     .cube:nth-child(1) {
-      animation-delay: 0.05s;
-    }
-    .cube:nth-child(2) {
       animation-delay: 0.1s;
     }
-    .cube:nth-child(3) {
-      animation-delay: 0.15s;
-    }
-    .cube:nth-child(4) {
+    .cube:nth-child(2) {
       animation-delay: 0.2s;
     }
-    .cube:nth-child(5) {
-      animation-delay: 0.25s;
-    }
-    .cube:nth-child(6) {
+    .cube:nth-child(3) {
       animation-delay: 0.3s;
     }
-    .cube:nth-child(7) {
-      animation-delay: 0.35s;
-    }
-    .cube:nth-child(8) {
+    .cube:nth-child(4) {
       animation-delay: 0.4s;
     }
+    .cube:nth-child(5) {
+      animation-delay: 0.5s;
+    }
+    .cube:nth-child(6) {
+      animation-delay: 0.6s;
+    }
+    .cube:nth-child(7) {
+      animation-delay: 0.7s;
+    }
+    .cube:nth-child(8) {
+      animation-delay: 0.8s;
+    }
     .cube:nth-child(9) {
-      animation-delay: 0.45s;
+      animation-delay: 0.9s;
     }
     
     @keyframes anim {
@@ -102,13 +102,14 @@
       position: fixed;
       top: 0;
       background-color: #dedede;
+      overflow:scroll;
     }
     
     </style>
     <script src="https://cdn.bootcss.com/prefixfree/1.0.7/prefixfree.min.js"></script> 
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root" ></div>
   <div id="loadingPanel">
     <div id="cubes" class='base'>
       <div class='cube'></div>
