修复safari 显示异常

--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -12,13 +12,13 @@
       box-sizing: inherit;
     }
     .base {
-      height: 9.06em;
+      height: 9.5em;
       left: 50%;
       margin: -7.5em;
       padding: 3em;
       position: absolute;
       top: 50%;
-      width: 9.06em;
+      width: 9.5em;
       transform: rotateX(45deg) rotateZ(45deg);
       transform-style: preserve-3d;
     }
@@ -132,7 +132,7 @@
       var root= document.getElementById('root');
       var loadingPanel = document.getElementById('loadingPanel');
       //设置loading 隐藏
-      loadingPanel.style.display='none';
+      //loadingPanel.style.display='none';
       //设置root显示
       root.style.display='';
     }
