--- a/frontend/src/pages/document.ejs
+++ b/frontend/src/pages/document.ejs
@@ -132,7 +132,7 @@
       var root= document.getElementById('root');
       var loadingPanel = document.getElementById('loadingPanel');
       //设置loading 隐藏
-      //loadingPanel.style.display='none';
+      loadingPanel.style.display='none';
       //设置root显示
       root.style.display='';
     }
